commit creacion de formulario

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <div class="container">
         <div class="d-flex justify-content-center">
             <h1>Registro de Usuarios</h1>
+            <form action="">
+                <label for="">Nombre Completo</label>
+                <input type="text" class="form-control" placeholder="Ingrese su nombre completo">
+            </form>
         </div>
     </div>
 </body>
